--- a/src/components/Earnings/Earnings.module.css
+++ b/src/components/Earnings/Earnings.module.css
@@ -22,6 +22,8 @@
 
 .earnings_card {
   display: flex;
+  border: 2px solid black;
+  margin: 2px;
   justify-content: center;
   width: 70px;
   height: 70px;
