perf: change backgrounds
fix: rename class of button

--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,5 @@
   font-family: "Zen Kurenaido", sans-serif;
   height: 100vh;
   background: linear-gradient(1deg, #203047, #2030476c),
-    url("https://source.unsplash.com/1600x900/?dollar") no-repeat center/cover;
+    url("https://source.unsplash.com/1600x900/?money") no-repeat center/cover;
 }
