--- a/src/components/Spendings/Spendings.module.css
+++ b/src/components/Spendings/Spendings.module.css
@@ -7,30 +7,42 @@
   width: 90%;
   height: 75%;
   background-color: #0b172aa1;
+  border: 2px solid white;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 .spendings_header {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  padding: 0 5%;
   width: 100%;
+  height: 7%;
 }
 
 .spendings_body {
   display: flex;
-  padding-left: 15px;
+  flex-wrap: wrap;
+  padding: 2% 2%;
+}
+
+.spendings_title {
+  font-size: 25px;
+  color: #fff;
 }
 
 .spendings_card {
   display: flex;
+  flex-wrap: wrap;
   border: 2px solid black;
-  margin: 2px;
+  margin: 0 5px;
   justify-content: center;
+  align-items: center;
   width: 70px;
   height: 70px;
+  text-align: center;
   background-color: #fff;
 }
-
 .spendings_amount {
-  font-size: 35px;
+  font-size: 25px;
   color: black;
 }
