--- a/src/components/Earnings/Earnings.module.css
+++ b/src/components/Earnings/Earnings.module.css
@@ -33,17 +33,17 @@
 .earnings_card {
   display: flex;
   flex-wrap: wrap;
-  border: 2px solid black;
+  border: 2px solid #ffffff;
   margin: 0 5px;
   justify-content: center;
   align-items: center;
   width: 70px;
   height: 70px;
   text-align: center;
-  background-color: #fff;
+  background-color: #122e5cce;
 }
 
 .earnings_amount {
   font-size: 25px;
-  color: black;
+  color: #ffffff;
 }
